EIP1-3229: EIP1:4572: Updates API spec for Getting AEDs with applicationId as queryParam
